css/staff.css
.scrollframe{
    position: absolute;
    padding-top: 10px;
    left: 2.4%;
    top: 5.2%;
    /* background-color: rgba(255,255,255,0.8); */
    overflow-y: auto;
    height: 88.13%;
    width: 95.1%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
h1{
    padding-top: 0.5em;
}
.credits{
    white-space: pre;
    font-size: 25px;
    text-align: left;
}
.gallery{
    display: grid;
    grid-template-columns: auto auto auto;
    padding: 0.5em 0px 1em 0px;

}
.gallery .promo{
    position: relative;
}
.gallery .promo:hover{
    background-color: rgba(0,0,0,0.5);
}
.gallery .promo_image{
    padding: 0.5em;
    width: 25vw;
}
.gallery .promo .promo_credit{
    position: absolute; 
    display: none;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    font-size: 3em;
    color: white;
}

